--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ os:
   - osx
 
 julia:
-  - 1.0
   - 1.1
   - 1.2
   - nightly
@@ -22,4 +21,5 @@ script:
                         Pkg.instantiate();
                         Pkg.add([PackageSpec(name = "TerminalRegressionTests", rev = "master"),
                                  PackageSpec(name = "VT100", rev = "master")]);
-                        Pkg.build();'
+                        Pkg.build;
+                        Pkg.test();'
