--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ notifications:
   email: false
 
 script:
-  - julia --project --color=yes -e 'using Pkg;
+  - julia --project -e 'using Pkg;
                         Pkg.instantiate();
                         Pkg.add([PackageSpec(name = "TerminalRegressionTests", rev = "master"),
                                  PackageSpec(name = "VT100", rev = "master")]);
