--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ notifications:
   email: false
 
 script:
-  - julia --project -e 'using Pkg;
-                        Pkg.instantiate();
-                        Pkg.add([PackageSpec(name = "TerminalRegressionTests", rev = "master"),
-                                 PackageSpec(name = "VT100", rev = "master")]);
-                        Pkg.build;
-                        Pkg.test();'
+  - julia --project --color=yes -e 'using Pkg;
+                                    Pkg.instantiate();
+                                    Pkg.add([PackageSpec(name = "TerminalRegressionTests", rev = "master"),
+                                             PackageSpec(name = "VT100", rev = "master")]);
+                                    Pkg.build;
+                                    Pkg.test();'
