--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ notifications:
 script:
   - julia --project --color=yes -e 'using Pkg;
                                     Pkg.instantiate();
-                                    Pkg.add([PackageSpec(name = "TerminalRegressionTests", rev = "master"),
+                                    Pkg.add([PackageSpec(name = "TerminalRegressionTests", url="https://github.com/pfitzseb/TerminalRegressionTests.jl.git", rev = "sp/betterdiffs"),
                                              PackageSpec(name = "VT100", rev = "master")]);
                                     Pkg.build;
                                     Pkg.test();'
