--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ os:
   - osx
 
 julia:
-  - 1.1
-  - 1.2
-  - 1.3
+  - 1   # current stable
+  - 1.1 # minimum supported version
   - nightly
 
 branches:
@@ -20,7 +19,4 @@ notifications:
 script:
   - julia --project --color=yes -e 'using Pkg;
                                     Pkg.instantiate();
-                                    Pkg.add([PackageSpec(name = "TerminalRegressionTests", url="https://github.com/pfitzseb/TerminalRegressionTests.jl.git", rev = "sp/betterdiffs"),
-                                             PackageSpec(name = "VT100", rev = "master")]);
-                                    Pkg.build;
                                     Pkg.test();'
