Improve local variable handling and exfiltration

--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ julia = "1.1"
 [extras]
 TerminalRegressionTests = "98bfdc55-cc95-5876-a49a-74609291cbe0"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [targets]
-test = ["Test", "TerminalRegressionTests"]
+test = ["Random", "Test", "TerminalRegressionTests"]
