ci: test on 1.8-release and nightly

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,7 +16,8 @@ jobs:
           - '1.1'
           - '1.6'
           - '1.7'
-          - '1.8-nightly'
+          - '1.8'
+          - 'nightly'
         os:
           - ubuntu-latest
         arch:
