--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,2 +1,6 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
+
+[compat]
+Documenter = "1"
