--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,29 +7,16 @@ on:
     tags: ["*"]
 jobs:
   test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
       matrix:
-        version:
-          - '1.6'
-          - '1.7'
-          - '1.8'
-          - '1.9'
-          - '1.10'
-        os:
-          - ubuntu-latest
-        arch:
-          - x64
-    env:
-      PYTHON: ""
+        julia-version: ['1.6', '1.7', '1.8', '1.9', '1.10', '1.11']
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@v2
+      - uses: julia-actions/install-juliaup@v1
         with:
-          version: ${{ matrix.version }}
-          arch: ${{ matrix.arch }}
+           julia-version: ${{matrix.julia-version}}
       - uses: actions/cache@v4
         env:
           cache-name: cache-artifacts
@@ -42,8 +29,3 @@ jobs:
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
-      - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v4
-        with:
-          file: lcov.info
-          token: ${{ secrets.CODECOV_TOKEN }}
