--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        channel: ['1.6', '1.7', '1.8', '1.9', '1.10', '1.11']
+        channel: ['1.6', '1.7', '1.8', '1.9', '1.10', '1.11', '1.12']
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v4
